@@ -1,3 +1,9 @@
+2003-07-17  David Malcolm <david@davemalcolm.demon.co.uk>
+
+	* cong-document.c
+
+	Fixed mismatched signal class struct offsets	
+	
 2003-07-16  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* cong-editor-area-text.c, cong-editor-area-text.h, cong-editor-area.c, cong-editor-area.h, cong-editor-node-text.c, cong-editor-widget3-impl.h, cong-editor-widget3.c
